Добавила потокобезопасность через synchronized, ограничение размера лога (queueCapacity) и эффективное уведомление слушателей. А также кнупку "Очистить" в LogWindow